// Copyright 2019 Citra Digital Lintas
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cdl.toldata;
option go_package = "./;toldata";
import "google/protobuf/descriptor.proto";

extend google.protobuf.ServiceOptions {
  string rest_mount = 99999;
}

message ErrorMessage {
    string error_message = 1 [ json_name = "error-message" ];
    int64 timestamp = 2;
    string busID = 3 [ json_name = "bus-id" ];
}

message StreamInfo {
    string ID = 1;
}

message ToldataHealthCheckInfo {
    string data = 1;
}

message Empty {}
